welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:42: error: not found: value dep2
	dep2()//Bien positioner pour faire le deuxieme damier 
        ^FlowerCase:123: error: not found: value dep2
	dep2()//Bien positioner pour faire le quatrieme damier 
        ^